--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@cloudinary/url-gen": "^1.10.2",
+    "@react-oauth/google": "^0.11.1",
     "@tanstack/react-query": "^4.32.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "cloudinary-react": "^1.8.1",
     "firebase": "^10.0.0",
     "react": "^18.2.0",
@@ -45,5 +47,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
-  }
+  },
+  "proxy": "https://port-0-moa-spring-3prof2llkqnph83.sel4.cloudtype.app"
 }
